--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="h ero">
+  <div class="hero">
     <!-- Background Video -->
-    <video autoplay muted loop playsinline class="bg-video">
+    <video autoplay loop playsinline  class="bg-video">
       <source src="./assets/coming soon vid - horizontal.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
