--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="hero">
     <!-- Background Video -->
-    <video autoplay loop playsinline  class="bg-video">
+    <video autoplay muted loop playsinline  class="bg-video">
       <source src="./assets/coming soon vid - horizontal.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
